--- a/views/series/index.ejs
+++ b/views/series/index.ejs
@@ -15,7 +15,10 @@
                             <%= serie.name %>
                         </td>
                         <td>
-                            <%= serie.status %>
+                            <!-- <%= labels.filter( label => label.id === serie.status)[0].name %> -->
+                            <span class="badge bg-secondary">
+                                <%= labels.find( label => label.id === serie.status ).name %>
+                            </span>
                         </td>
                         <td>
                             <a href="/series/excluir/<%= serie._id %>">Excluir</a> |
