--- a/views/series/editar.ejs
+++ b/views/series/editar.ejs
@@ -14,10 +14,9 @@
                 <div class="form-group">                
                     <label for="status">Situação</label>
                     <select class="form-control" id="status" name="status">              
-                        
-                        <option value="to-watch">Assistir</option>
-                        <option value="watching">Assistindo</option>
-                        <option value="watched">Assistido</option>                    
+                        <% labels.forEach(label => { %>                            
+                            <option value="<%= label.id %>" <% if (label.id === serie.status) { %> selected <% } %> ><%= label.name %></option>
+                        <% }) %>
                     </select>
                 </div>
                 <button class="btn btn-primary">Salvar</button>
