--- a/views/series/editar.ejs
+++ b/views/series/editar.ejs
@@ -4,12 +4,15 @@
         <div class="row">
             <div class="col-lg-8 mx-auto">
             <h2>Séries</h2>
-            <p class="lead">Nova série</p>
+            <p class="lead">Editar série</p>
             <form method="post">
                 <div class="form-group">
                     <label for="serie">Nome da série</label>
                     <input value="<%= serie.name %>" type="text" class="form-control" id="serie" name="name" aria-describedby="nameHelp" placeholder="Informe o nome da série">
                     <small id="nameHelp" class="form-text text-muted">Nome da série a ser salvo.</small>
+                    <% if (errors && errors.indexOf('name') >= 0) { %>                        
+                        <small id="nameHelp" class="form-text text-muted">Por favor, informe o nome da série.</small>
+                    <% } %>
                 </div>
                 <div class="form-group">                
                     <label for="status">Situação</label>
