--- a/views/series/index.ejs
+++ b/views/series/index.ejs
@@ -12,7 +12,7 @@
                 <% series.forEach(serie => { %>
                     <tr>
                         <td>
-                            <%= serie.name %>
+                            <a href="/series/info/<%= serie._id %>"><%= serie.name %></a>
                         </td>
                         <td>
                             <!-- <%= labels.filter( label => label.id === serie.status)[0].name %> -->
